apps/pulse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse
  namespace: pulse
  labels:
    app: pulse
spec:
  type: ClusterIP
  ports:
    - port: 7655
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pulse
    app.kubernetes.io/instance: pulse
