apps/pulse/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pulse
  namespace: pulse
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pulse.oisd.dev`)
      kind: Rule
      services:
        - name: pulse
          port: 7655
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
